--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
     "drizzle-orm": "^0.29.4",
-    "next": "^14.2.1",
+    "next": "^14.2.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,5 +41,5 @@
   "ct3aMetadata": {
     "initVersion": "7.30.2"
   },
-  "packageManager": "pnpm@8.15.4"
+  "packageManager": "pnpm@9.0.6"
 }
