--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.3",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
     "next": "^14.2.3",
     "postgres": "^3.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
