--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postgres": "^3.4.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "server-only": "^0.0.1",
     "uploadthing": "^6.10.0",
     "zod": "^3.22.4"
   },
